--- a/style.css
+++ b/style.css
@@ -6,28 +6,11 @@ body {
     align-items: center;
 }
 
-.wrapper {
-    min-width: 300px;
-    min-height: 200px;
-    box-sizing: border-box;
+button {
+    width: 177px;
 }
 
-.wrapper__container {
-    width: 100%;
-    height: 100%;
+.repos {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid rgb(161, 161, 161);
-    border-radius: 5px;
-    margin-bottom: 5px;
-    padding: 5px;
-    box-sizing: border-box;
-    background-color: pink;
-}
-
-.wrapper__saved-repo {
-    min-height: 50px;
-    border: 1px solid pink;
-    border-radius: 5px;
+    flex-direction: column;
 }
